# lincity-ng

./: .cvsignore  .gitignore  Acknowledgements  Bugs-beta  CHANGELOG.md  CHANGES  CMakeLists.txt  CONTRIBUTING.md  COPYING-data.txt  COPYING-dll.txt  COPYING-fonts.txt  COPYING-models-and-gfx.txt  COPYRIGHT  Dockerfile  FAQ  Jamfile  Jamrules  Makefile  Makefile.am  Makefile.in  README  README-TODO-WaterWell  README-Unlimited  README-WaterWell  README.md  README.profiling  RELNOTES  SConstruct  TODO  acconfig.h  acinclude.m4  aclocal.m4  animate.h  autogen.sh  cliglobs.c  cliglobs.h  clinet.c  clinet.h  clistubs.c  common.h  (+94 more)
data/: CMakeLists.txt  Jamfile  colour.pal  io.github.lincity_ng.lincity-ng.desktop  io.github.lincity_ng.lincity-ng.metainfo.xml  io.github.lincity_ng.lincity_ng.desktop  io.github.lincity_ng.lincity_ng.metainfo.xml  lincity-ng.6  lincity-ng.desktop  lincityconfig.xml  userconfig.xml
data/gui/: CMakeLists.txt  Jamfile  allgone.xml  app.xml  blacksmithup.xml  bulldoze_monument_yn.xml  bulldoze_river_yn.xml  bulldoze_shanty_yn.xml  buttonpanel.xml  coal_survey_yn.xml  coalmineup.xml  coalpowerup.xml  credits.xml  creditslist.xml  cricketup.xml  dialog.xml  fire.xml  firestationup.xml  gamebuttons.xml  gamestats.xml  gui.its  healthup.xml  helpwindow.xml  hvindustryup.xml  identity.xsl  import-exportup.xml  launch-evac.xml  launch-fail.xml  launch-gone.xml  launch-good.xml  launch_rocket_yn.xml  loadgame.xml  ltindustryup.xml  mainmenu.xml  messagearea.xml  millup.xml  minimap.xml  minimapswitchbuttons.xml  mod_wind_up.xml  mps.xml  (+31 more)
data/gui-gen/: cricketup.xml  hvindustryup.xml
data/gui-src/: Jamfile  buttonpanel.xml  coal_survey_yn.xml  coalmineup.xml  coalpowerup.xml  credits.xml  creditslist.xml  fire.xml  helpwindow.xml  import-exportup.xml  launch-gone.xml  loadgame.xml  minimap.xml  mod_wind_up.xml  mps.xml  no-credit-parkland.xml  parkup.xml  pbar.xml  portdialog.xml  potteryup.xml  recycleup.xml  roadup.xml  rocketup.xml  savegame.xml  speedpanel.xml
data/help/: blacksmith.hlp  blacksmith.xml  bulldoze.hlp  button-index3.hlp  coal.hlp  coalmine.hlp  cricket.hlp  economy.hlp  export.hlp  farm.hlp  fast.hlp  finance.hlp  firestation.hlp  fonttest.hlp  food.hlp  goods.hlp  index.hlp  industryh.hlp  industryl.hlp  market.hlp  menu.hlp  monument.hlp  msb-coal.hlp  msb-cricket.hlp  msb-fire.hlp  msb-health.hlp  msb-normal.hlp  msb-ub40.hlp  newgame.hlp  openload.hlp  ore.hlp  oremine.hlp  other-costs.hlp  pause.hlp  pottery.hlp  powerline.hlp  powerline2.hlp  powerscoal.hlp  powerssolar.hlp  rail.hlp  (+10 more)
data/help_templates/: convert.py  find-help-translation-issues.sh
data/icons/: blacksmith-button.csi  blacksmith1.csi  blacksmith2.csi  blacksmith3.csi  blacksmith6.csi  coalmine-empty.csi  coalmine-low.csi  commune-button.csi  commune.csi  commune12.csi  commune13.csi  commune14.csi  commune2.csi  commune4.csi  commune5.csi  commune6.csi  commune9.csi  cricket1.csi  cricket2.csi  cricket6.csi  cricket7.csi  ex_port-button.csi  farm0.csi  farm10.csi  farm12.csi  farm13.csi  farm14.csi  farm15.csi  farm4.csi  farm8.csi  fast-offl.csi  fast-onl.csi  fast-onr.csi  fire3.csi  fire4.csi  fire5.csi  firedone1.csi  firedone2.csi  firedone4.csi  firestation-button.csi  (+148 more)
data/locale/: CMakeLists.txt  ca.po  cs.po  da.po  de.po  el.po  es.po  fr.po  gd.po  gl.po  hu.po  ja.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  tr.po  zh_CN.po
data/messages/: didcoalsurvey.mes  launch-fail.mes  millup.mes  mousetype.mes  not_enough_tech.mes  potteryup.mes  riverup.mes  schoolup.mes  shfire-oc.mes
data/models/: Bridge_ancient.blend  PowerTower.blend  Powersolar.blend  Railbridge.blend  Road.blend  Roadbridge.blend  SteelMill-1.blend  SteelMill.blend  SubStation-1.blend  SubStation.blend  Trackbridge.blend  Waterwell.blend  asphalt_plain.rgb  asphalt_straight.rgb  basketball.blend  blacksmith.blend  coalmine.blend  coalpower.blend  coalpower2.blend  commune.blend  commune2.blend  crossing.blend  desert.blend  empty_tile.blend  farm.blend  fire.blend  firestation.blend  garbagedump.blend  garbagedump_full.blend  grass.blend  hospital-1.blend  hospital.blend  lightindustry-2.blend  lightindustry-smoke.blend  lightindustry.blend  market.blend  mill.blend  monument.blend  monument.wings  oremine.blend  (+57 more)
data/opening/: Beach.scn  Rocket_98.scn  bad_times.scn  do_image  extreme_arid.scn  extreme_wetland.scn  good_times.scn  iconlist.txt  open.pov  scrawl_w.fnt  text1  text2  text3  winfont_8x8.fnt
data/rosegarden/: 02_-_Robert_van_Herk_-_City_Blues.rg  03_Robert-van-Herk_Architectural-Contemplations.rg
data/savegames/: good_times2.scn
data/sounds/: sounds.xml
lib/gettext/: CMakeLists.txt
lincity/: .sconsign  Makefile.am  Makefile.in  coal_power.c  engine.c  engine.cc  fileutil.cc  fire.c  fire.h  firestation.c  firestation.h  groups.c  lclib.c  lclib.cpp  lcstring.h  ldsvguts.c  ldsvguts.cc  lin-city.h  lincity.h  lintypes.c  lintypes.cc  lintypes.h  market.c  modules.h  organic_farm.h  pbar_interface.h  power_line.c  power_line.h  prefix.cc  rail.c  road.c  road.h  rocket_pad.c  shared_globals.h  shrglobs.cpp  shrglobs.h  simulate.c  simulate.h  solar_power.c  stats.cc  (+7 more)
lincity/modules/: .sconsign  all_modules.h  blacksmith.cpp  coal_power.h  commune.cpp  cricket.h  heavy_industry.h  light_industry.cc  light_industry.cpp  monument.h  oremine.h  organic_farm.cc  parkland.h  port.cc  recycle.h  residence.h  road.cpp  school.h  shanty.cc  solar_power.cpp  solar_power.h  substation.cpp  substation.h  track.cpp  university.h
modules/: Makefile.am  blacksmith.c  blacksmith.h  coal_power.c  coal_power.h  coalmine.c  coalmine.h  commune.c  commune.h  cricket.c  cricket.h  fire.c  firestation.c  firestation.h  health_centre.c  health_centre.h  heavy_industry.c  heavy_industry.h  light_industry.c  light_industry.h  mill.c  mill.h  modules.h  monument.c  monument.h  new_module.sh  oremine.c  oremine.h  organic_farm.c  organic_farm.h  parkland.c  port.c  port.h  pottery.c  pottery.h  power_line.c  power_line.h  rail.c  rail.h  recycle.c  (+25 more)
src/PhysfsStream/: CMakeLists.txt  Jamfile  (+6 more)
(+2254 files in other folders)
